force-app/main/default/objects/Success_Student__c/Success_Student__c.object-meta.xml
<CustomObject>
    <description>[SF ENT/DBAmp] - Used for undergraduate, graduate and coach students data used in the Coach/Advisor Portals.</description>
    <label>Success Student</label>
    <nameField>
        <displayFormat>SS-{0}</displayFormat>
        <label>Success Student ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Success Students</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>