force-app/main/default/objects/Success_Student__c/fields/ASURiteID__c.field-meta.xml
<CustomField>
    <fullName>ASURiteID__c</fullName>
    <formula>Student__r.ASURite_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASURITE</label>
    <type>Text</type>
</CustomField>