force-app/main/default/objects/Success_Student__c/fields/Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Change_Date__c</fullName>
    <formula>Student__r.Change_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Outlook Change Date</label>
    <type>Date</type>
</CustomField>