force-app/main/default/objects/Success_Student__c/fields/Chat_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Chat_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is for the beta testing of Rocket Chat, it will be manually checked for the first cohort of students in the test group</description>
    <label>Chat Enabled</label>
    <type>Checkbox</type>
</CustomField>