force-app/main/default/objects/Success_Student__c/fields/Coach_Contact_Preference__c.field-meta.xml
<CustomField>
    <fullName>Coach_Contact_Preference__c</fullName>
    <description>Coach: How coaching student prefers to be contacted</description>
    <inlineHelpText>How coaching student prefers to be contacted</inlineHelpText>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Slack</fullName>
            </value>
            <value>
                <fullName>Zoom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>