force-app/main/default/objects/Success_Student__c/fields/Coach_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Coach_Engagement__c</fullName>
    <description>Coach: Level of Engagement of Coaching Student</description>
    <inlineHelpText>Level of Engagement of Coaching Student</inlineHelpText>
    <label>Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nonresponsive</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>