force-app/main/default/objects/Success_Student__c/fields/Coach_Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Coach_Enrollment_Status__c</fullName>
    <description>Student's enrollment status</description>
    <inlineHelpText>New: New, 1st sess
Continuing: Enrolled 2+ consecutive sess
Graduated: Comp'd prgrm
NDrop: No credit crses
TDrop: No classes, will rtrn
PDrop: Never rtrn
Re-Entry: Out of class for 2-6 sess
Re-Apply: Out 6+ sess, needs new adm ppwk
Lv of Absence</inlineHelpText>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Continuing</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>NDrop</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>PDrop</fullName>
            </value>
            <value>
                <fullName>Re-Apply</fullName>
            </value>
            <value>
                <fullName>Re-Entry</fullName>
            </value>
            <value>
                <fullName>Re-Entry - Contacted</fullName>
            </value>
            <value>
                <fullName>Re-Entry - Declined</fullName>
            </value>
            <value>
                <fullName>Re-Entry - Enrolled</fullName>
            </value>
            <value>
                <fullName>Re-Entry - In Progress</fullName>
            </value>
            <value>
                <fullName>Re-Entry - LOA</fullName>
            </value>
            <value>
                <fullName>TDrop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>