force-app/main/default/objects/Success_Student__c/fields/Coaching_Student__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Student__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify which students will be part of Success Student Coaching. Info will be imported from the lists of new students for the initial cohort and each subsequent cohort as they transition from ITK to ASU. This field can be replaced with a lookup to campus once all online students are coached by ASU.</description>
    <label>Coaching Student</label>
    <type>Checkbox</type>
</CustomField>