force-app/main/default/objects/Success_Student__c/fields/Curr_Cont_Prediction_Level__c.field-meta.xml
<CustomField>
    <fullName>Curr_Cont_Prediction_Level__c</fullName>
    <formula>Student__r.Curr_Cont_Prediction_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Outlook Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>