force-app/main/default/objects/Success_Student__c/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <formula>Student__r.EMPLID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EMPLID</label>
    <type>Text</type>
</CustomField>