force-app/main/default/objects/Success_Student__c/fields/Exception_Segmentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Segmentation_Type__c</fullName>
    <description>Used by Success Center to make sure the student receives comms based on their actual segmentation type, and not the segmentation type of the coach. 

The data source will be user picked and reside on the Success Student record.</description>
    <inlineHelpText>This field should reflect the student's preferred segmentation type.</inlineHelpText>
    <label>Exception Segmentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core GRAD</fullName>
            </value>
            <value>
                <fullName>Core UGRD</fullName>
            </value>
            <value>
                <fullName>Corp Part GRAD</fullName>
            </value>
            <value>
                <fullName>Corp Part UGRD</fullName>
            </value>
            <value>
                <fullName>Military GRAD</fullName>
            </value>
            <value>
                <fullName>Military UGRD</fullName>
            </value>
            <value>
                <fullName>Reentry</fullName>
            </value>
            <value>
                <fullName>Starbucks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>