force-app/main/default/objects/Success_Student__c/fields/Influence_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Influence_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Coaching students who have opted out of receiving emails from Influence (Success Center Interactive Video / Email provider) can be marked true by coaches.</description>
    <inlineHelpText>Coaching students who have opted out of receiving emails from Influence (Success Center Interactive Video / Email provider) can be marked true by coaches.</inlineHelpText>
    <label>Influence Opt-Out</label>
    <type>Checkbox</type>
</CustomField>