force-app/main/default/objects/Success_Student__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that this student is an active Success Student</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>