force-app/main/default/objects/Success_Student__c/fields/Messaging_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Messaging_Account_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Messaging Account Created</label>
    <type>Checkbox</type>
</CustomField>