force-app/main/default/objects/Success_Student__c/fields/Military_Branch_Status__c.field-meta.xml
<CustomField>
    <fullName>Military_Branch_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Success Portal Management] - The Military Branch and Status of the student if one exists</description>
    <inlineHelpText>[Success Portal Management] - The Military Branch and Status of the student if one exists</inlineHelpText>
    <label>Military Branch - Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>