force-app/main/default/objects/Success_Student__c/fields/Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Phone__c</fullName>
    <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(
IF(
(ISBLANK(Student__r.MobilePhone)), Student__r.HomePhone, Student__r.MobilePhone),
 "(", ""), ")", ""), " ", ""), "-", "")</formula>
    <label>Mobile Phone</label>
    <type>Text</type>
</CustomField>