force-app/main/default/objects/Success_Student__c/fields/Most_Recent_Outlook_Change_Direction__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Outlook_Change_Direction__c</fullName>
    <formula>Student__r.Most_Recent_Outlook_Change_Direction__c</formula>
    <label>Most Recent Outlook Change Direction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>