force-app/main/default/objects/Success_Student__c/fields/Next_Term_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Next_Term_Enrolled__c</fullName>
    <description>Data will be imported, used in Coach Portal List view</description>
    <label>Next Term Enrolled</label>
    <length>16</length>
    <type>Text</type>
</CustomField>