force-app/main/default/objects/Success_Student__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Plan, used for assign students to Coaches</description>
    <inlineHelpText>Lookup to Plan, used for assign students to Coaches</inlineHelpText>
    <label>Plan Code</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipLabel>Success Students</relationshipLabel>
    <relationshipName>Success_Students</relationshipName>
    <type>Lookup</type>
</CustomField>