force-app/main/default/objects/Success_Student__c/fields/Pod_Owner_ID__c.field-meta.xml
<CustomField>
    <fullName>Pod_Owner_ID__c</fullName>
    <formula>Success_Pod__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pod Owner ID</label>
    <type>Text</type>
</CustomField>