force-app/main/default/objects/Success_Student__c/fields/Prev_Cont_Prediction_Level__c.field-meta.xml
<CustomField>
    <fullName>Prev_Cont_Prediction_Level__c</fullName>
    <formula>Student__r.Prev_Cont_Prediction_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Outlook Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>