force-app/main/default/objects/Success_Student__c/fields/Program_Code__c.field-meta.xml
<CustomField>
    <fullName>Program_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Program, used for assign students to Coaches</description>
    <label>Program Code</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Success Students</relationshipLabel>
    <relationshipName>Success_Students</relationshipName>
    <type>Lookup</type>
</CustomField>