force-app/main/default/objects/Success_Student__c/fields/Reasons_for_Drop__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Drop__c</fullName>
    <description>Select a Reason if a Drop status is chosen for Enrollment Status (Dependent Field of Enrollment Status)</description>
    <inlineHelpText>Select a Reason if a Drop status is chosen for Enrollment Status</inlineHelpText>
    <label>Reasons for Drop</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Coach_Enrollment_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic-Classes Too Difficult: Math</fullName>
            </value>
            <value>
                <fullName>Academic-Classes Too Difficult: Other than Math or Writing</fullName>
            </value>
            <value>
                <fullName>Academic-Classes Too Difficult: Writing</fullName>
            </value>
            <value>
                <fullName>Academic-Difficulty Fitting in with Classmates</fullName>
            </value>
            <value>
                <fullName>Academic-Dissatisfied with Instructor Availability/Response Time</fullName>
            </value>
            <value>
                <fullName>Academic-Dissatisfied with Online: Prefer Ground</fullName>
            </value>
            <value>
                <fullName>Academic-Dissatisfied with Online Learning Environment</fullName>
            </value>
            <value>
                <fullName>Academic-Not Available: Preferred Major</fullName>
            </value>
            <value>
                <fullName>Academic-Student Dissatisfied with Their Academic Performance</fullName>
            </value>
            <value>
                <fullName>Academic-Tutoring: Math Tutor Ineffective</fullName>
            </value>
            <value>
                <fullName>Academic-Tutoring: Non-Math or Writing Tutor Ineffective</fullName>
            </value>
            <value>
                <fullName>Academic-Tutoring: Writing Tutor Ineffective</fullName>
            </value>
            <value>
                <fullName>Academic-Unsafe or Hostile Learning Environment/Classmates</fullName>
            </value>
            <value>
                <fullName>Career-Career Demands Leave No Time for School</fullName>
            </value>
            <value>
                <fullName>Career-Military Duty Leaves No Time for School</fullName>
            </value>
            <value>
                <fullName>Career-Religious Mission Leaves No Time for School</fullName>
            </value>
            <value>
                <fullName>Financial-Ineligible to Receive Financial Aid</fullName>
            </value>
            <value>
                <fullName>Financial-Insufficient Financial Aid</fullName>
            </value>
            <value>
                <fullName>Financial-Lost Tuition Benefits: Corporate Partner</fullName>
            </value>
            <value>
                <fullName>Financial-Lost Tuition Benefits: Military</fullName>
            </value>
            <value>
                <fullName>Financial-Lost Tuition Benefits: Other Source</fullName>
            </value>
            <value>
                <fullName>Financial-Lost Tuition Benefits: Starbucks</fullName>
            </value>
            <value>
                <fullName>Military-Deployment</fullName>
            </value>
            <value>
                <fullName>Military-Duty</fullName>
            </value>
            <value>
                <fullName>Military-Move</fullName>
            </value>
            <value>
                <fullName>Non-Responsive-Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Personal-Attending a Different School</fullName>
            </value>
            <value>
                <fullName>Personal-Family Demands Leave No Time for School</fullName>
            </value>
            <value>
                <fullName>Personal-Judicial Affairs</fullName>
            </value>
            <value>
                <fullName>Personal-Language/Communication Problem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>