force-app/main/default/objects/Success_Student__c/fields/Reentry_Active__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Active__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>[Success Portal Management] - Identifies a student as a current or past reentry student</description>
    <inlineHelpText>[Success Portal Management] - Identifies a student as a current or past reentry student</inlineHelpText>
    <label>Reentry Active</label>
    <type>Checkbox</type>
</CustomField>