force-app/main/default/objects/Success_Student__c/fields/Reentry_Converted__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Converted__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>[Success Portal Management] - True if the student reenrolls and starts classes</description>
    <inlineHelpText>[Success Portal Management] - True if the student reenrolls and starts classes</inlineHelpText>
    <label>Reentry Converted</label>
    <type>Checkbox</type>
</CustomField>