force-app/main/default/objects/Success_Student__c/fields/Reentry_Graduated__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Graduated__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>[Success Portal Management] - Reentry student who eventually graduated</description>
    <inlineHelpText>[Success Portal Management] - Reentry student who eventually graduated</inlineHelpText>
    <label>Reentry Graduated</label>
    <type>Checkbox</type>
</CustomField>