force-app/main/default/objects/Success_Student__c/fields/Reentry_Last_Reg_Sess__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Last_Reg_Sess__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Success Portal Management] - The last term and session the student registered for prior to becoming a reentry student</description>
    <inlineHelpText>[Success Portal Management] - The last term and session the student registered for prior to becoming a reentry student</inlineHelpText>
    <label>Reentry Last Reg Sess</label>
    <length>6</length>
    <type>Text</type>
</CustomField>