force-app/main/default/objects/Success_Student__c/fields/Reentry_Specialist_Name__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Specialist_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Success Portal Management] - The name of the reentry specialist working with the student</description>
    <inlineHelpText>[Success Portal Management] - The name of the reentry specialist working with the student</inlineHelpText>
    <label>Reentry Specialist Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>