force-app/main/default/objects/Success_Student__c/fields/Reentry_Term_Sess__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Term_Sess__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Success Portal Management] - The term and session the student re-enrolls</description>
    <inlineHelpText>[Success Portal Management] - The term and session the student re-enrolls</inlineHelpText>
    <label>Reentry Term Sess</label>
    <length>6</length>
    <type>Text</type>
</CustomField>