force-app/main/default/objects/Success_Student__c/fields/Reentry_Term_Sess_Enrl_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reentry_Term_Sess_Enrl_Status_Reason__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Success Portal Management] - The enrollment status associated with the Reentry Term Sess</description>
    <inlineHelpText>[Success Portal Management] - The enrollment status associated with the Reentry Term Sess</inlineHelpText>
    <label>Reentry Term Sess Enrl Status Reason</label>
    <length>4</length>
    <type>Text</type>
</CustomField>