force-app/main/default/objects/Success_Student__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by EdPlus to track which students had a conversation with their coach about referrals.</description>
    <inlineHelpText>Tracks which students had a conversation with their coach about referrals.</inlineHelpText>
    <label>Referral</label>
    <type>Checkbox</type>
</CustomField>