force-app/main/default/objects/Success_Student__c/fields/Segmentation_Exception__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by EdPlus Success Center in order to prevent reassignment (in stored procedure calculations). This field prevents reassignment to another coach. Success Coach Leads and Chuck Hechel (Success Center Project Manager) will primarily populate this field</description>
    <inlineHelpText>Check this box to prevent this student from being reassigned to another Success Coach based on the student's segmentation.</inlineHelpText>
    <label>Segmentation Exception</label>
    <type>Checkbox</type>
</CustomField>