force-app/main/default/objects/Success_Student__c/fields/Segmentation_Type__c.field-meta.xml
<CustomField>
    <fullName>Segmentation_Type__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>Used by EdPlus Success Center to identify student's segmentation, used in conjunction with Exception Segmentation Type field.  This field is populated by users with Success Portal Management permission set.</description>
    <inlineHelpText>This reflects the student's segmentation, used in conjunction with field Exception Segmentation Type.</inlineHelpText>
    <label>Segmentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Core GRAD</fullName>
            </value>
            <value>
                <fullName>Core UGRD</fullName>
            </value>
            <value>
                <fullName>Corp Part GRAD</fullName>
            </value>
            <value>
                <fullName>Corp Part UGRD</fullName>
            </value>
            <value>
                <fullName>Military GRAD</fullName>
            </value>
            <value>
                <fullName>Military UGRD</fullName>
            </value>
            <value>
                <fullName>Reentry</fullName>
            </value>
            <value>
                <fullName>Starbucks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>