force-app/main/default/objects/Success_Student__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Success Students</relationshipLabel>
    <relationshipName>Success_Students</relationshipName>
    <type>Lookup</type>
</CustomField>