force-app/main/default/objects/Success_Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Student__r.LastName + ', ' + Student__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>