force-app/main/default/objects/Success_Student__c/fields/Success_Coach_Name__c.field-meta.xml
<CustomField>
    <fullName>Success_Coach_Name__c</fullName>
    <formula>Success_Resource__r.Resource__r.FirstName + ' ' + Success_Resource__r.Resource__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Coach Name</label>
    <type>Text</type>
</CustomField>