force-app/main/default/objects/Success_Student__c/fields/Success_Pod__c.field-meta.xml
<CustomField>
    <fullName>Success_Pod__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This determines which Advisors are assigned to this student.</description>
    <inlineHelpText>This determines which Advisors are assigned to this student.</inlineHelpText>
    <label>Success Pod</label>
    <referenceTo>Success_Pod__c</referenceTo>
    <relationshipLabel>Success Students</relationshipLabel>
    <relationshipName>Success_Students</relationshipName>
    <type>Lookup</type>
</CustomField>