force-app/main/default/objects/Success_Student__c/fields/Success_Resource__c.field-meta.xml
<CustomField>
    <fullName>Success_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>links the Success Student to their Assigned Success Resource</description>
    <label>Success Resource</label>
    <referenceTo>Success_Resource__c</referenceTo>
    <relationshipLabel>Success Students</relationshipLabel>
    <relationshipName>Success_Students</relationshipName>
    <type>Lookup</type>
</CustomField>