force-app/main/default/objects/Success_Student__c/fields/Success_Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Success_Resource_ID__c</fullName>
    <formula>Success_Resource__r.UserId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success Resource ID</label>
    <type>Text</type>
</CustomField>