force-app/main/default/objects/Success_Student__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>Coach: Time Zone</description>
    <inlineHelpText>Time Zone of Student (Limited to U.S. and one International)</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hawaii-Hilo (HI)</fullName>
            </value>
            <value>
                <fullName>Alaska (AK)</fullName>
            </value>
            <value>
                <fullName>Pacific (PST)</fullName>
            </value>
            <value>
                <fullName>Arizona (AZ)</fullName>
            </value>
            <value>
                <fullName>Mountain (MST)</fullName>
            </value>
            <value>
                <fullName>Central (CST)</fullName>
            </value>
            <value>
                <fullName>Eastern (EST)</fullName>
            </value>
            <value>
                <fullName>International (INT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>