force-app/main/default/objects/Success_Student__c/recordTypes/Advisor.recordType-meta.xml
<RecordType>
    <fullName>Advisor</fullName>
    <active>true</active>
    <description>Denotes if the Student is a non-Coaching Student.</description>
    <label>Advisor</label>
</RecordType>