force-app/main/default/objects/Success_Student__c/recordTypes/Career_Coach.recordType-meta.xml
<RecordType>
    <fullName>Career_Coach</fullName>
    <active>true</active>
    <description>Used to denote if the student is a Career Coach student for Ed Plus Success Coaches.</description>
    <label>Career Coach</label>
</RecordType>