force-app/main/default/objects/Success_Student__c/recordTypes/Coach.recordType-meta.xml
<RecordType>
    <fullName>Coach</fullName>
    <active>true</active>
    <description>Used to denote if the student is a Coaching Student for Ed Plus Success Coaches.</description>
    <label>Coach</label>
</RecordType>