force-app/main/default/objects/Success_Student__c/validationRules/If_RT_Advisor_then_Coaching_Student_FALS.validationRule-meta.xml
<ValidationRule>
    <fullName>If_RT_Advisor_then_Coaching_Student_FALS</fullName>
    <active>true</active>
    <description>If record type is Advisor, then Coaching Student = FALSE.</description>
    <errorConditionFormula>AND(
 RecordType.Name = 'Advisor',
 Coaching_Student__c 
)</errorConditionFormula>
    <errorMessage>If Success Student Record Type is Advisor, then Coaching Student = FALSE.</errorMessage>
</ValidationRule>