force-app/main/default/objects/Success_Student__c/validationRules/If_RT_Coach_then_Coaching_Student_TRUE.validationRule-meta.xml
<ValidationRule>
    <fullName>If_RT_Coach_then_Coaching_Student_TRUE</fullName>
    <active>true</active>
    <description>If RT is Coach, then Coaching Student = TRUE.</description>
    <errorConditionFormula>AND(
RecordType.Name = 'Coach',
Coaching_Student__c = FALSE
)</errorConditionFormula>
    <errorMessage>If Success Coach Record Type is Coach, then Coaching Student = TRUE.</errorMessage>
</ValidationRule>