force-app/main/default/objects/Success_Student__c/listViews/All_Success_Students.listView-meta.xml
<ListView>
    <fullName>All_Success_Students</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Coaching_Student__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Student__c</columns>
    <columns>Plan_Code__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>Success_Resource__c</columns>
    <columns>EMPLID__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Success Students</label>
</ListView>