force-app/main/default/objects/Success_Student__c/listViews/Coaching_Students.listView-meta.xml
<ListView>
    <fullName>Coaching_Students</fullName>
    <columns>NAME</columns>
    <columns>Success_Resource__c</columns>
    <columns>EMPLID__c</columns>
    <columns>Coaching_Student__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Success_Coach_Name__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>Success_Resource_ID__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coaching_Student__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Success_Resource__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Coaching Students</label>
</ListView>