force-app/main/default/objects/Success_Student__c/listViews/Success_Students_No_EMPLID.listView-meta.xml
<ListView>
    <fullName>Success_Students_No_EMPLID</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Coaching_Student__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Student__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>Success_Resource__c</columns>
    <columns>EMPLID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EMPLID__c</field>
        <operation>equals</operation>
    </filters>
    <label>Success Students - No EMPLID</label>
</ListView>