force-app/main/default/objects/Success_Student__c/listViews/Success_Students_with_no_Coach.listView-meta.xml
<ListView>
    <fullName>Success_Students_with_no_Coach</fullName>
    <columns>NAME</columns>
    <columns>Coaching_Student__c</columns>
    <columns>Student_Name__c</columns>
    <columns>Student__c</columns>
    <columns>Success_Pod__c</columns>
    <columns>Success_Resource__c</columns>
    <columns>EMPLID__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Success_Resource__c</field>
        <operation>equals</operation>
    </filters>
    <label>Success Students with no Coach</label>
</ListView>