force-app/main/default/objects/Success_Student__c/listViews/Success_Stus_w_Success_Resource.listView-meta.xml
<ListView>
    <fullName>Success_Stus_w_Success_Resource</fullName>
    <columns>NAME</columns>
    <columns>Student_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Student__c</columns>
    <columns>Coaching_Student__c</columns>
    <columns>Success_Resource__c</columns>
    <columns>Success_Resource_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Coaching_Student__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Success Stus w/o Success Resource</label>
</ListView>